Fixed scroll issue for resume section on mobile

--- a/src/Components/Resume/Resume.css
+++ b/src/Components/Resume/Resume.css
@@ -94,7 +94,7 @@ h4 {
   border-bottom: solid 3px var(--light-active);
 }
 #resume #resumeContainer #experiences {
-  height: 450px;
+  height: fit-content;
   overflow-y: auto;
 }
 
@@ -118,6 +118,10 @@ h4 {
   #resume #resumeContainer {
     display: grid;
     grid-template-columns: 250px 1fr;
+  }
+  #resume #resumeContainer #experiences {
+    height: 450px;
+    overflow-y: auto;
   }
 
   #resume #resumeContainer #experienceTitles {
